--- a/sass/css/styles.css
+++ b/sass/css/styles.css
@@ -1,6 +1,8 @@
 * {
   margin: 0;
   padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 body {
@@ -30,7 +32,7 @@ body {
 }
 
 .main-header .first-h3 {
-  background-color: none;
+  font-family: 'Barlow', Serif;
   height: 50px;
   color: white;
   margin-left: 1em;
@@ -217,6 +219,13 @@ body {
   grid-area: midsec;
   background-color: white;
   text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .client-testimonials .client-h {
@@ -343,18 +352,14 @@ body {
     -ms-grid-column: 1;
     -ms-grid-column-span: 2;
     grid-area: header;
-    width: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    background-image: url(../../images/desktop/image-header.jpg);
+    height: 670px;
+    background-size: 195% 100%;
+    background-position: -245px 0px;
     background-repeat: no-repeat;
-    background-size: 220% 100%;
-    background-position: -455px 00px;
   }
   .main-header .first-h3 {
-    margin-left: 1em;
-    margin-top: 1em;
+    font-size: 2rem;
+    font-weight: 800;
   }
   .main-header .main-nav {
     display: -webkit-box;
@@ -371,39 +376,49 @@ body {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    font-size: 1rem;
-    margin-top: 3em;
-    margin-right: 3em;
+    font-size: 2rem;
+    margin-top: 2.5em;
+    margin-left: -3.75em;
     background-color: white;
-    height: 40vh;
+    height: 400px;
+    width: 122.3%;
+    position: relative;
+    z-index: 1;
   }
   .main-header .main-nav-li li {
     color: #a7abae;
-    margin-left: 3em;
+    margin: 0 auto;
+    padding: 0.7em;
   }
   .main-header .main-nav-li li:hover {
-    background-color: white;
+    background-color: #fad400;
     font-family: 'Fraunces', sans-serif;
     color: black;
-    width: 75px;
-    padding: 10px;
-    border-radius: 30px;
+    width: 180px;
+    padding: 20px;
+    border-radius: 35px;
     text-align: center;
   }
   .main-header .top-h1 {
-    margin-right: 8em;
+    margin: 0 auto;
+    margin-top: -14em;
+    margin-left: -4em;
     font-size: 2rem;
     text-align: center;
+    line-height: 50px;
+    letter-spacing: 15px;
   }
   .main-header .arrow-down {
     width: 40px;
-    top: 1.5em;
-    right: 0.1em;
+    margin: 0 auto;
+    top: 3em;
+    right: 5em;
   }
   .main-header .menu-pos {
     display: -webkit-box;
@@ -414,18 +429,51 @@ body {
             justify-content: flex-end;
   }
   .main-header .menu-btn {
-    width: 30px;
+    width: 42px;
     display: block;
-    color: white;
-    margin-top: 1em;
-    margin-right: 1.5em;
-    font-size: 2rem;
+    margin-top: 0.9em;
+    margin-right: 0.1em;
+    font-size: 3rem;
+  }
+  .main-header .triangle {
+    width: 0;
+    height: 0;
+    border-bottom: 47px solid white;
+    border-left: 47px solid transparent;
+    position: relative;
+    top: 6em;
+    right: 2.61em;
   }
   .area-1 {
     -ms-grid-row: 3;
     -ms-grid-column: 1;
     -ms-grid-column-span: 2;
     grid-area: uppersec;
+    margin: 0 auto;
+  }
+  .area-1-header {
+    text-align: center;
+    font-size: 2.5rem;
+    font-weight: bold;
+    margin-top: 2em;
+  }
+  .area-1-para {
+    font-family: "Barlow",'seriff';
+    font-size: 1.3rem;
+    margin: 1em;
+    line-height: 1.5em;
+    color: #a7abae;
+    margin-top: 1.5em;
+    text-align: center;
+  }
+  .area-1-a {
+    display: block;
+    text-align: center;
+    margin-top: 2em;
+    margin-bottom: 4em;
+    text-decoration: none;
+    color: #5a636c;
+    font-weight: bold;
   }
   .area-2 {
     -ms-grid-row: 2;
@@ -445,7 +493,7 @@ body {
     grid-area: redcup;
     background-image: url(../../images/desktop/image-stand-out.jpg);
     background-size: cover;
-    background-position: -50px 0px;
+    background-position: -35px 0px;
     height: 500px;
   }
   .area-4 {
@@ -453,18 +501,42 @@ body {
     -ms-grid-column: 1;
     -ms-grid-column-span: 2;
     grid-area: uppersec2;
+    margin: 0 auto;
+  }
+  .area-5-h {
+    font-size: 2rem;
+    text-align: center;
+    margin-top: 15em;
+  }
+  .area-5-p {
+    width: 500px;
+    font-size: 1.35rem;
+  }
+  .graphic-d {
+    height: 400px;
+    background-size: cover;
+    background-position: -150px 0px;
   }
   .area-5 {
     -ms-grid-row: 6;
     -ms-grid-column: 1;
     -ms-grid-column-span: 2;
     grid-area: cherry;
+    height: 700px;
+  }
+  .photography {
+    height: 400px;
+    background-image: url(../../images/desktop/image-photography.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: -150px 0px;
   }
   .area-6 {
     -ms-grid-row: 7;
     -ms-grid-column: 1;
     -ms-grid-column-span: 2;
     grid-area: oranges;
+    height: 700px;
   }
   .client-testimonials {
     -ms-grid-row: 8;
@@ -474,8 +546,9 @@ body {
     text-align: center;
   }
   .client-testimonials .client-h {
-    margin-top: 6em;
-    margin-bottom: 3em;
+    word-spacing: 0.9em;
+    letter-spacing: 0.4em;
+    color: #5a636c;
   }
   .client-testimonials .img-people {
     width: 60px;
@@ -491,23 +564,24 @@ body {
     margin-bottom: 2em;
   }
   .client-testimonials .people {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
   .client-testimonials .people .para {
-    color: #818498;
-    font-family: "Barlow", "Seriff";
-    margin-bottom: 4em;
+    margin: 0 auto;
+    width: 80%;
+    font-size: 1.6rem;
+    margin-bottom: 2em;
+    line-height: 1.5em;
   }
   .client-testimonials .user {
-    margin-bottom: 0.5em;
+    font-size: 1.5rem;
   }
   .client-testimonials .position {
-    color: #818498;
-    margin-bottom: 8em;
-    font-family: "Barlow", "Seriff";
-    font-size: 0.9rem;
+    margin-bottom: 3em;
+    font-size: 1.2rem;
   }
   .lower-img-1 {
     -ms-grid-row: 9;
@@ -533,12 +607,43 @@ body {
     -ms-grid-column: 2;
     grid-area: fourimg;
   }
+  .img-2 {
+    height: 311px;
+    width: auto;
+  }
   .main-footer {
     background-color: #458c7e;
     -ms-grid-row: 11;
     -ms-grid-column: 1;
     -ms-grid-column-span: 2;
     grid-area: footer;
+  }
+  .main-footer .footer-h3 {
+    font-family: "Barlow", "Seriff";
+    font-size: 1.8rem;
+    font-weight: 900;
+    margin-top: 1.6em;
+    text-align: center;
+    margin-bottom: 1em;
+    color: #25564b;
+  }
+  .main-footer .footer-list {
+    text-align: center;
+    word-spacing: 5em;
+    margin-bottom: 4em;
+    font-family: "Barlow", "Seriff";
+    color: #25564b;
+  }
+  .main-footer .footer-list li {
+    display: inline;
+  }
+  .main-footer .footer-icons {
+    text-align: center;
+    word-spacing: 1em;
+    margin-bottom: 4em;
+  }
+  .main-footer .footer-icons li {
+    display: inline;
   }
 }
 /*# sourceMappingURL=styles.css.map */
