--- a/styles.scss
+++ b/styles.scss
@@ -363,9 +363,9 @@ body{
         height: 0;
         border-bottom: 47px solid $White;
         border-left: 47px solid transparent;
-        position: relative;
-        top:6em;
-        right:2.61em;
+        margin-top:3.5em;
+        margin-left: 8.64em;
+
         //make it invisible
        // visibility: hidden;
       
@@ -379,11 +379,11 @@ body{
         flex-direction: column;
         justify-content:space-evenly;
         align-items: center;
-        font-size: 2rem;   
-        margin-top: 2.5em;
-        margin-left:-4.5em;
+        font-size: 1.3rem;   
+        margin-top:-0.1em;
+        margin-left:-7em;
         background-color:$White;
-        height: 400px; 
+        height: 300px; 
         width:138.8%;
         position: relative;// needs it for element not to crash with each other
         z-index: 1;
@@ -395,7 +395,7 @@ body{
     .main-nav-li li{
         color:$Grayish-blue;
         margin:0 auto;
-        padding:0.7em;
+        padding:0.2em;
         //background-color: hotpink;
         
     }
@@ -417,7 +417,7 @@ body{
     .top-h1{
         
         margin:0 auto;
-        margin-top: -14em;
+        margin-top: -11em;
         margin-left:-6em;
         font-size: 2rem;
         text-align: center;
@@ -444,7 +444,7 @@ body{
         width:35px;
         display:block;
         margin-top: 0.9em;
-       // margin-right:-0.3em;
+        margin-right:1em;
         font-size: 3rem;
     }
     
