--- a/sass/css/styles.css
+++ b/sass/css/styles.css
@@ -379,15 +379,10 @@ body {
         -ms-flex-direction: column;
             flex-direction: column;
   }
-  .main-header .triangle {
-    width: 0;
-    height: 0;
-    border-bottom: 47px solid white;
-    border-left: 47px solid transparent;
-    margin-top: 3.5em;
-    margin-left: 8.64em;
-  }
   .main-header .main-nav-li {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
@@ -399,13 +394,30 @@ body {
         -ms-flex-align: center;
             align-items: center;
     font-size: 1.3rem;
-    margin-top: -0.1em;
+    margin-top: 5em;
     margin-left: -7em;
     background-color: white;
     height: 300px;
-    width: 138.8%;
+    width: 140%;
     position: relative;
     z-index: 1;
+  }
+  .main-header .triangle {
+    width: 0;
+    height: 0;
+    border-bottom: 47px solid white;
+    border-left: 47px solid transparent;
+  }
+  .main-header .triangle-base {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    height: 47px;
+    width: 100%;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+    margin-top: -3.4em;
   }
   .main-header .main-nav-li li {
     color: #a7abae;
