--- a/sass/css/styles.css
+++ b/sass/css/styles.css
@@ -394,7 +394,7 @@ body {
         -ms-flex-align: center;
             align-items: center;
     font-size: 1.3rem;
-    margin-top: 5em;
+    margin-top: 1.8em;
     margin-left: -7em;
     background-color: white;
     height: 300px;
@@ -407,17 +407,21 @@ body {
     height: 0;
     border-bottom: 47px solid white;
     border-left: 47px solid transparent;
+    margin-top: 0.6em;
   }
   .main-header .triangle-base {
+    margin-left: -3em;
+    background-color: none;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    height: 47px;
-    width: 100%;
+    height: 20px;
+    width: 140%;
+    margin-left: -8.1em;
     -webkit-box-pack: end;
         -ms-flex-pack: end;
             justify-content: flex-end;
-    margin-top: -3.4em;
+    margin-top: 1em;
   }
   .main-header .main-nav-li li {
     color: #a7abae;
