--- a/styles.scss
+++ b/styles.scss
@@ -369,7 +369,7 @@ body{
         justify-content:space-evenly;
         align-items: center;
         font-size: 1.3rem;   
-        margin-top:5em;
+        margin-top:1.8em;
         margin-left:-7em;
         background-color:$White;
         height: 300px; 
@@ -383,17 +383,20 @@ body{
         height: 0;
         border-bottom: 47px solid $White;
         border-left: 47px solid transparent;
-      
+         margin-top: 0.6em;
         //make it invisible
        // visibility: hidden;
       
       }
-      .triangle-base{
+      .triangle-base {
+        margin-left:-3em;
+          background-color:none;
           display: flex;
-          height: 47px;
-          width: 100%;
+          height:20px;
+          width: 140%;
+          margin-left:-8.1em;
           justify-content: flex-end;
-         margin-top:-3.4em;
+         margin-top:1em;
       }
    
     
@@ -432,7 +435,6 @@ body{
         
     }
    
-    
     .arrow-down{
         width:40px;
         margin: 0 auto;
