--- a/styles.scss
+++ b/styles.scss
@@ -88,13 +88,13 @@ body{
     }
 
     .main-nav-li li:hover{
-        background-color:$White;
+        background-color:skyblue;
         font-family:'Fraunces', sans-serif; 
-        color:black;
         width:85px;
         padding: 10px;
         border-radius: 30px;
         text-align: center; 
+        cursor: pointer;
     }
 
     .top-h1{
@@ -145,6 +145,20 @@ body{
      color: $Very-dark-grayish-blue;
      font-weight:bold;
      margin-left: 3em;
+
+    
+    }
+    .area-1-a:hover{
+        border-radius: 10px;
+        height: 7px;
+        width: 128px;
+        box-shadow: 0 13px 0 0 $Yellow;
+    }
+    .area-1-a1:hover{
+        border-radius: 10px;
+        height: 7px;
+        width: 128px;
+        box-shadow: 0 13px 0 0 $Soft-red;
     }
 
     .area-2{
@@ -301,6 +315,10 @@ body{
     .footer-list li{
         display: inline;  
     }
+    .footer-list li:hover{
+        color:$White;
+        cursor: pointer;
+    }
 
     .footer-icons{
         text-align: center;
@@ -311,6 +329,10 @@ body{
     .footer-icons li{
         display: inline;
     }
+    .footer-icons li:hover{
+       color:$White;
+       cursor: pointer;
+    }
 }
 
 @media screen and (max-width:420px) {
@@ -318,7 +340,7 @@ body{
 
     body{
         margin:0;
-        background-color: red;
+        background-color:none;
        
     }
     .container{
@@ -358,12 +380,11 @@ body{
       flex-direction: column;
     }
 
-    
 
     .main-nav-li{
         
        //display when clicked has to placed there
-       //visibility: hidden;
+        visibility: hidden;
         display: flex;
         flex-direction: column;
         justify-content:space-evenly;
@@ -385,7 +406,7 @@ body{
         border-left: 47px solid transparent;
          margin-top: 0.6em;
         //make it invisible
-       // visibility: hidden;
+        visibility: hidden;
       
       }
       .triangle-base {
@@ -456,6 +477,11 @@ body{
         font-size: 3rem;
     }
     
+
+    
+    .show{
+        visibility: visible;
+    }
     
 } 
     //start of areas below header
@@ -467,12 +493,12 @@ body{
     }
 
     .area-1-header{
-        
+        width:80%;
         text-align: center;
         font-size: 2.5rem;
         font-weight: bold;
-        margin-top: 2em; 
-        margin-left: 0em;
+        margin:0 auto;
+        margin-top: 1.5em;
     }
 
     .area-1-para{
@@ -490,10 +516,10 @@ body{
      text-align: center;
      margin-top: 2em;
      margin-bottom: 4em;
-     text-decoration: none;
      color: $Very-dark-grayish-blue;
      font-weight:bold;
      margin-left: 0em;
+     
     }
 
     .area-2{
@@ -528,8 +554,9 @@ body{
     }
 
     .area-5-p{ 
-        width: 300px;
-        font-size: 1rem;  
+        width: 400px;
+        font-size: 1.1rem;  
+        line-height: 1.5rem;
     }
 
     .graphic-d{
@@ -564,6 +591,7 @@ body{
         text-align: center;
 
         .client-h{
+            font-size: 1rem;
             word-spacing: 0.9em;
             letter-spacing: 0.4em;
             color: $Very-dark-grayish-blue;
@@ -585,7 +613,7 @@ body{
         .people .para {
             margin: 0 auto;
             width:80%;
-             font-size:1.6rem;
+             font-size:1.2rem;
              margin-bottom:2em ;
              line-height: 1.5em;    
         }
@@ -596,7 +624,7 @@ body{
 
         .position{
             margin-bottom: 3em;  
-            font-size: 1.2rem;
+            font-size: 1rem;
         }
 
     }
@@ -642,7 +670,7 @@ body{
 
         .footer-list{ 
             text-align: center;
-            word-spacing: 2em;
+            word-spacing: 4em;
             margin-bottom:4em;
             font-family:"Barlow", "Seriff";
             color:$Dark-desaturated-cyan;
@@ -659,6 +687,7 @@ body{
 
         .footer-icons li{
             display: inline;
+            color: $Dark-desaturated-cyan;
         }
     }
 }
