--- a/sass/css/styles.css
+++ b/sass/css/styles.css
@@ -12,7 +12,6 @@ body {
 }
 
 .container {
-  margin: 0 auto;
   max-width: 780px;
   background-color: none;
   display: -ms-grid;
@@ -251,6 +250,7 @@ body {
 .client-testimonials .client-h {
   margin-top: 6em;
   margin-bottom: 3em;
+  color: #5a636c;
 }
 
 .client-testimonials .img-people {
@@ -277,6 +277,7 @@ body {
   color: #818498;
   font-family: "Barlow", "Seriff";
   margin-bottom: 4em;
+  line-height: 1.6em;
 }
 
 .client-testimonials .user {
@@ -615,7 +616,6 @@ body {
     font-size: 1rem;
     word-spacing: 0.9em;
     letter-spacing: 0.4em;
-    color: #5a636c;
   }
   .client-testimonials .img-people {
     width: 60px;
