--- a/sass/css/styles.css
+++ b/sass/css/styles.css
@@ -245,6 +245,7 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  margin: 0 auto;
 }
 
 .client-testimonials .client-h {
@@ -278,6 +279,8 @@ body {
   font-family: "Barlow", "Seriff";
   margin-bottom: 4em;
   line-height: 1.6em;
+  font-size: 0.85rem;
+  width: 280px;
 }
 
 .client-testimonials .user {
