--- a/styles.scss
+++ b/styles.scss
@@ -27,9 +27,8 @@ body{
  
 }
 .container{
- // margin:0 auto;
- 
-   max-width: 780px;
+  margin:0 auto;
+   
     background-color:none;
     display:grid;
     
@@ -191,8 +190,8 @@ body{
         height: 400px;
         background-image: url(../../images/desktop/image-graphic-design.jpg);
         background-repeat:no-repeat;
-        background-size:500px;
-        background-position: -15px 0px;
+        background-size:cover;
+        background-position: 0px 0px;
       }
 
       .area-5-h{
@@ -217,8 +216,8 @@ body{
         height: 400px;
           background-image: url(../../images/desktop/image-photography.jpg);
           background-repeat:no-repeat;
-          background-size:500px;
-          background-position: -15px 0px; 
+          background-size:cover;
+          background-position: 0px 0px; 
       }
     
     .client-testimonials{
@@ -274,7 +273,7 @@ body{
       background-image: url(../../images/desktop/image-gallery-milkbottles.jpg);
       background-size: cover;
       height: 300px;
-     // width:300px;
+      width:300px;
     }
 
     .lower-img-2{
@@ -290,8 +289,8 @@ body{
     }
 
     .img-2{
-        height: 300px;
-        width: auto;
+       height:auto;
+        width:100%;
     }
 //
 
